@@ -1,5 +1,7 @@
 0.8.7
 * fix railsrc loading
+* add ori gem for nice Object#ri calling
+* minor tweaks
 
 0.8.6
 * windows support
